fix broken CSS. Fix short-status area scaling. Improve menu display. Many changes originally from spectra.

--- a/trunk/package/webif/files/www/themes/xwrt/webif.css
+++ b/trunk/package/webif/files/www/themes/xwrt/webif.css
@@ -93,6 +93,9 @@ option
 	padding-right: 0.5em;
 	padding-left: 2.0em;
 	float: right;
+	background-color: inherit !important;
+	height: 5em;
+	width: 10em;
 }
 
 .openwrt-title
@@ -103,14 +106,20 @@ option
 	padding-left: 0.5em;
 	height: 5em;
 	background: url(/images/openwrt-logo.gif);
-	background-repeat: repeat-x;	
+	background-repeat: repeat-x;		
+}
+
+#short-status ul 
+{
+	display: block;
+	margin-top: 1.5em;
 }
 
 #mainmenu
 {
         width: 100%;
 	height: 2.5em;
- 	font-size: 0.8em;
+ 	font-size: 0.9em;
 }
 
 #mainmenu ul 
@@ -133,11 +142,10 @@ option
 	display: block;
 }
 
-#mainmenu .selected a
+#mainmenu .selected a,
+#submenu .selected a
 {
-	border: 1px solid #CCC;
-	border-top: none;
-	border-bottom: none;
+	
 }
 
 #submenu
@@ -145,7 +153,7 @@ option
 	width: 100%;
 	height: 2.2em;
 	line-height: 2.2em;
-	font-size: 0.7em;
+	font-size: 0.8em;
 }
 
 #submenu li
@@ -154,18 +162,14 @@ option
        list-style-type: none;	
 }
 
-#submenu li a 
+#submenu li a
 {
-	padding: 0 0.5em 0 0.5em;
+	padding: 0 0.6em 0 0.6em;
 	display: block;
 }
 
-#submenu .selected a
-{
-
-}
-
-.seperator-maincat
+#mainmenu .seperator,
+#submenu .seperator,
 {
 	line-height: 2.5em;
 	padding: 0 0.4em 0 0.4em;
